@@ -4,6 +4,7 @@ extends =
     versions.cfg
 
 allow-picked-versions = false
+socket-timout = 5
 versions = versions
 unzip = true
 
