@@ -21,6 +21,10 @@ distribute = 0.6.21
 # Chameleon
 zope.pagetemplate = 3.6.3
 zope.tal = 3.6.0
+# Newer buildout to support python -o mode
+docutils = 0.8
+zc.buildout = 1.5.3-jarn1
+zc.recipe.egg = 1.3.2
 
 ## Buildout / server infrastructure
 buildout.extensionscripts = 1.0
