@@ -1,13 +1,8 @@
 [buildout]
-extensions =
-    mr.developer
-    buildout.extensionscripts
+extensions = mr.developer
 extends =
     cfgs/base.cfg
     cfgs/sources.cfg
-
-extension-scripts =
-    ${buildout:directory}/buildout_utils.py:patchScriptGeneration
 
 parts =
     repozo
