@@ -4,6 +4,7 @@ Changelog
 1.3.9 - unreleased
 ------------------
 
+- Internal: Updated to buildout 1.5.
 
 1.3.8 - 2011-10-15
 ------------------
